removed sensitive info from .env that i keep checking in because i dum

--- a/seeed/2-image-classifier/.env
+++ b/seeed/2-image-classifier/.env
@@ -1,5 +1,5 @@
 # Replace the value of these variables with your own container registry
 
-CONTAINER_REGISTRY_ADDRESS="Your ACR address"
-CONTAINER_REGISTRY_USERNAME="Your ACR username"
-CONTAINER_REGISTRY_PASSWORD="Your ACR password"
+CONTAINER_REGISTRY_ADDRESS="grove.azurecr.io"
+CONTAINER_REGISTRY_USERNAME="grove"
+CONTAINER_REGISTRY_PASSWORD="W4OKe36gJHJnrIinwoUcmQwMk+36uegO"
